syntax = "proto3";

import "./../../../../proto/task/task.proto";

message WorkerTask {
  Task task = 1;
  WorkerAssignment assignment = 2;
}

message WorkerAssignment {
  string manager_id = 1;
  optional string assigned_at = 2;
  optional string accepted_at = 3;
  optional string completed_at = 4;
  optional string rejected_at = 5;
}
